# ShardForge

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.fast  Makefile  README.MD  build.rs  clippy.toml  demo.sh  deny.toml  docker-compose.perf.yml  docker-compose.yml  rustfmt.toml  shardforge.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  code-quality.yml  comprehensive.yml  dependency-updates.yml  pr-checks.yml  project-health.yml  release.yml  warnings.yml
benches/: storage.rs
docs/: DOCKER.md  architecture.md  build.md  ci-fix-summary.md  cli-implementation-summary.md  competitive-analysis.md  conclusion.md  deployment.md  functionalities.md  implementation.md  market-analysis.md  overview.md  performance.md  pipeline-summary.md  raft-implementation-summary.md  risk-assessment.md  roadmap.md  security.md  success-metrics.md  technologies.md  testing.md
monitoring/: prometheus.yml
proto/: database.proto
scripts/: build.ps1  dev.ps1  diagnose.ps1  docker-bench.sh  fix.ps1  format.bat  format.sh  test-ci-logic.ps1  test-ci-logic.sh  test.sh
shardforge-cli/: Cargo.toml
shardforge-cli/src/: commands.rs  import_export.rs  lib.rs  main.rs  repl.rs
shardforge-cli/tests/: cli_tests.rs
shardforge-config/: Cargo.toml
shardforge-config/src/: config.rs  lib.rs  loader.rs  validator.rs
shardforge-core/: Cargo.toml
shardforge-core/src/: cluster.rs  error.rs  lib.rs  node.rs  types.rs
shardforge-storage/: Cargo.toml
shardforge-storage/src/: engine.rs  index.rs  iterator.rs  lib.rs  memory.rs  mvcc.rs  rocksdb.rs  sled.rs
src/: lib.rs
src/config/: mod.rs
src/core/: mod.rs
src/network/: client.rs  connection.rs  mod.rs  protocol.rs  server.rs
src/raft/: config.rs  log.rs  mod.rs  node.rs  rpc.rs  snapshot.rs  state.rs  storage.rs
src/sql/: aggregation.rs  ast.rs  cache.rs  executor.rs  mod.rs  parser.rs  planner.rs  prepared.rs  statistics.rs
src/storage/: mod.rs
src/transaction/: manager.rs  mod.rs  mvcc.rs
tests/: integration.rs
tests/common/: mod.rs
tests/config/: config_integration.rs
tests/sql/: mod.rs  sql_integration.rs
tests/storage/: storage_integration.rs
