[workspace]
members = [
    "shardforge-core",
    "shardforge-config",
    "shardforge-storage",
    "shardforge-cli",
]

[package]
name = "shardforge"
version = "0.1.0"
edition = "2021"
description = "ShardForge Distributed Database System"
authors = ["ShardForge Team"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/shardforge/shardforge"
repository = "https://github.com/shardforge/shardforge"
readme = "README.md"
keywords = ["database", "distributed", "rust", "postgresql", "raft"]
categories = ["database", "concurrency", "data-structures"]

[[bin]]
name = "shardforge"
path = "bin/shardforge.rs"

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]
sled = ["dep:sled"]

[dependencies]
# External dependencies
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
clap.workspace = true

# Storage engine dependencies (optional)
rocksdb = { version = "0.22", optional = true }
sled = { version = "0.34", optional = true }

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "2.0"
rmp-serde = "1.3"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.23", features = ["rt-tokio"] }
metrics = { version = "0.23", features = ["std"] }

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# CLI and user interaction
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
comfy-table = "7.1"

# Binary dependencies
clap-bin = { version = "4.5", features = ["derive"] }

# No build dependencies needed

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
test-log = "0.2"
proptest = "1.5"
mockall = "0.13"
fake = "2.9"
rstest = "0.23"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
iai = "0.1"

# Test utilities
tempfile = "3.0"
rand = "0.8"

# Code quality tools are installed separately
# Security auditing
cargo-audit = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
