[package]
name = "shardforge-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Configuration management for ShardForge distributed database"
authors = ["ShardForge Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
config.workspace = true
toml.workspace = true

# Additional dependencies
async-trait.workspace = true
tracing.workspace = true

# Local dependencies
shardforge-core = { path = "../shardforge-core" }

[dev-dependencies]
tempfile = "3.0"